feat: Update people header to display the count of followed users dynamically

--- a/src/app/pages/people/people.component.html
+++ b/src/app/pages/people/people.component.html
@@ -3,7 +3,7 @@
   <div class="people-header">
     <div class="title-section">
       <h1>People</h1>
-      <p>Explore the people you follow</p>
+      <p>Explore the {{people().length}} people you follow</p>
     </div>
 
     <div class="controls-section">
