--- a/src/app/pages/profile/profile-header/profile-header.component.html
+++ b/src/app/pages/profile/profile-header/profile-header.component.html
@@ -31,7 +31,7 @@
         <a [routerLink]="['/p', npub() || pubkey(), 'badges']" class="badge-item"
           (mouseenter)="onBadgeMouseEnter($event, badge)" (mouseleave)="onBadgeMouseLeave()">
           @if (parsedBadge.thumb || parsedBadge.image) {
-          <img [src]="parsedBadge.thumb || parsedBadge.image" [alt]="parsedBadge.name" [title]="parsedBadge.name"
+          <img [src]="parsedBadge.thumb || parsedBadge.image"
             class="badge-image" loading="lazy" (error)="onBadgeImageError($event)" />
           } @else {
           <div class="badge-placeholder" [title]="parsedBadge.name">
