--- a/src/app/pages/profile/profile-header/profile-header.component.html
+++ b/src/app/pages/profile/profile-header/profile-header.component.html
@@ -1,5 +1,4 @@
-<div class="profile-header-container" [class.compact]="compact()">
-  @if (!compact()) {
+<div class="profile-header-container">
   <div class="profile-banner" [class.clickable]="profile()?.data.banner" [style.background-image]="
         profile()?.data.banner ? 'url(' + profile()!.data.banner + ')' : getDefaultBanner()
       " (click)="profile()?.data.banner && layout.openProfileBanner(profile()!)"
@@ -7,8 +6,7 @@
     (keydown.space)="profile()?.data.banner && layout.openProfileBanner(profile()!)"
     [tabindex]="profile()?.data.banner ? 0 : -1" [attr.role]="profile()?.data.banner ? 'button' : null"
     [attr.aria-label]="profile()?.data.banner ? 'View full size banner image' : null"></div>
-  }
-  <div class="profile-info-container" [class.compact]="compact()" [class.mobile]="layoutService.isHandset()">
+  <div class="profile-info-container" [class.mobile]="layoutService.isHandset()">
     <div class="profile-avatar-wrapper">
       <div class="profile-avatar" [class.clickable]="profile()?.data.picture" [class.mobile]="layoutService.isHandset()"
         (click)="profile()?.data.picture && layout.openProfilePicture(profile()!)"
@@ -24,15 +22,15 @@
       </div>
 
       <!-- Badges Section positioned relative to avatar -->
-      @if (!compact() && hasAcceptedBadges()) {
+      @if (hasAcceptedBadges()) {
       <div class="profile-badges">
         @for (badge of topBadges(); track $index) {
         @if (parsedBadges()[$index]; as parsedBadge) {
         <a [routerLink]="['/p', npub() || pubkey(), 'badges']" class="badge-item"
           (mouseenter)="onBadgeMouseEnter($event, badge)" (mouseleave)="onBadgeMouseLeave()">
           @if (parsedBadge.thumb || parsedBadge.image) {
-          <img [src]="parsedBadge.thumb || parsedBadge.image"
-            class="badge-image" loading="lazy" (error)="onBadgeImageError($event)" />
+          <img [src]="parsedBadge.thumb || parsedBadge.image" class="badge-image" loading="lazy"
+            (error)="onBadgeImageError($event)" />
           } @else {
           <div class="badge-placeholder" [title]="parsedBadge.name">
             <mat-icon>military_tech</mat-icon>
@@ -51,7 +49,7 @@
       }
     </div>
 
-    <div class="profile-info" [class.compact]="compact()">
+    <div class="profile-info">
       <div class="profile-menu-actions">
         @if (isOwnProfile()) {
         <button mat-flat-button routerLink="edit" class="hide-small">
@@ -122,7 +120,7 @@
       </div>
       }
 
-      @if (!compact() && profile()) {
+      @if (profile()) {
       @let verifiedId = verifiedIdentifier();
 
       @if (verifiedId.value) {
@@ -158,7 +156,7 @@
       }
       }
 
-      @if (!compact() && profile()?.data.website) {
+      @if (profile()?.data.website) {
       <div class="profile-item" title="{{ websiteUrl() }}">
         <mat-icon>link</mat-icon>
         <span><a [href]="websiteUrl()" target="_blank" rel="noopener noreferrer">{{
@@ -167,7 +165,7 @@
       </div>
       }
 
-      @if (!compact() && profile()?.data.about) {
+      @if (profile()?.data.about) {
       <div class="profile-bio">
         <div class="bio-text" [class.bio-expanded]="isBioExpanded()">{{ displayedBio() }}</div>
         @if (shouldShowExpander()) {
@@ -187,7 +185,6 @@
       }
 
       <div class="profile-extra-info">
-        @if (!compact()) {
         <a class="following-count" [routerLink]="'following'" [queryParamsHandling]="'preserve'">
           Following {{ profileState.followingList().length }}
         </a>
@@ -207,7 +204,6 @@
         <a class="following-count" [routerLink]="'badges'" [queryParamsHandling]="'preserve'">
           Badges {{ badgeCount() }}
         </a>
-        }
         }
       </div>
 
