refactor: Remove icon selection from new column dialog and adjust styles for better layout

--- a/src/app/pages/feeds/new-column-dialog/new-column-dialog.component.scss
+++ b/src/app/pages/feeds/new-column-dialog/new-column-dialog.component.scss
@@ -4,6 +4,10 @@
   max-width: 100%;
 }
 
+.column-type-section {
+  margin-bottom: 1rem;
+}
+
 .column-type-cards {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
