fix: Remove unused animation directive from following container

--- a/src/app/pages/profile/profile-relays/profile-relays.component.html
+++ b/src/app/pages/profile/profile-relays/profile-relays.component.html
@@ -1,4 +1,4 @@
-<div class="following-container" @slideInOut #followingContainer>
+<div class="following-container" #followingContainer>
   <div class="following-header" @profileShrink>
     <button mat-icon-button class="back-button" (click)="goBack()" aria-label="Back">
       <mat-icon>arrow_back</mat-icon>
