--- a/src/app/pages/event/event.component.html
+++ b/src/app/pages/event/event.component.html
@@ -17,17 +17,17 @@
   <!-- Display parent events in thread (if any) -->
   @if (parentEvents().length > 0) {
     <div class="parent-events">
-      <h3>Thread Context</h3>
+      <!-- <h3>Thread Context</h3> -->
       @for (parentEvent of parentEvents(); track parentEvent.id) {
         <div class="parent-event">
           <app-event [event]="parentEvent" appearance="plain" mode="thread"></app-event>
         </div>
       }
-      <div class="thread-indicator">
+      <!-- <div class="thread-indicator">
         <hr />
         <span>Reply below</span>
         <hr />
-      </div>
+      </div> -->
     </div>
   }
 
@@ -49,7 +49,7 @@
       @if (isLoadingParents()) {
         <div class="status-item">
           <mat-spinner diameter="14"></mat-spinner>
-          <span>Loading thread context...</span>
+          <span>Loading thread...</span>
         </div>
       }
       @if (isLoadingReplies()) {
