feat: Fix notification persistence by updating last check timestamp on bulk actions and clearing account-specific notifications

--- a/src/app/pages/people/people.component.html
+++ b/src/app/pages/people/people.component.html
@@ -10,13 +10,13 @@
       <!-- Find People Button -->
       <button mat-flat-button color="accent" routerLink="/people/discover" matTooltip="Discover new people to follow">
         <mat-icon>explore</mat-icon>
-        Find People
+        Find<span class="hide-tiny"> People</span>
       </button>
 
       <!-- Add Person Button -->
       <button mat-flat-button color="primary" (click)="openAddPersonDialog()" matTooltip="Add a new person to follow">
         <mat-icon>person_add</mat-icon>
-        Add Person
+        Add<span class="hide-tiny"> Person</span>
       </button>
 
       <!-- View menu -->
