feat: Enhance responsiveness of source toggle buttons with improved layout and media queries. Fixes With feed creator, "Content source" selection goes past edge of dialog box Fixes #182

--- a/src/app/pages/feeds/new-column-dialog/new-column-dialog.component.html
+++ b/src/app/pages/feeds/new-column-dialog/new-column-dialog.component.html
@@ -69,19 +69,19 @@
           <mat-button-toggle-group name="source" formControlName="source" class="source-toggle">
             <mat-button-toggle value="for-you">
               <mat-icon>for_you</mat-icon>
-              For You
+              <span class="hide-tiny">For You</span>
             </mat-button-toggle>
             <mat-button-toggle value="following">
               <mat-icon>people</mat-icon>
-              Following
+              <span class="hide-tiny">Following</span>
             </mat-button-toggle>
             <mat-button-toggle value="public">
               <mat-icon>public</mat-icon>
-              Public
+              <span class="hide-tiny">Public</span>
             </mat-button-toggle>
             <mat-button-toggle value="custom">
               <mat-icon>tune</mat-icon>
-              Custom
+              <span class="hide-tiny">Custom</span>
             </mat-button-toggle>
           </mat-button-toggle-group>
           <br><br>
