--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1111,7 +1111,8 @@ app-media-queue .media-list mat-list {
     // For full-screen dialogs, adjust position and height to account for titlebar
     .image-dialog .mat-mdc-dialog-container,
     .image-dialog-panel .mat-mdc-dialog-container,
-    .responsive-dialog .mat-mdc-dialog-container {
+    .responsive-dialog .mat-mdc-dialog-container,
+    .event-dialog-container .mat-mdc-dialog-container {
       margin-top: env(titlebar-area-height, 33px) !important;
       max-height: calc(100vh - env(titlebar-area-height, 33px)) !important;
       height: calc(100vh - env(titlebar-area-height, 33px)) !important;
@@ -1120,7 +1121,8 @@ app-media-queue .media-list mat-list {
     // Ensure the overlay pane itself uses full height
     .image-dialog.cdk-overlay-pane,
     .image-dialog-panel.cdk-overlay-pane,
-    .responsive-dialog.cdk-overlay-pane {
+    .responsive-dialog.cdk-overlay-pane,
+    .event-dialog-container.cdk-overlay-pane {
       max-height: 100vh !important;
       height: 100vh !important;
     }
@@ -1128,7 +1130,8 @@ app-media-queue .media-list mat-list {
     // Align content to top of overlay
     .cdk-global-overlay-wrapper:has(.image-dialog),
     .cdk-global-overlay-wrapper:has(.image-dialog-panel),
-    .cdk-global-overlay-wrapper:has(.responsive-dialog) {
+    .cdk-global-overlay-wrapper:has(.responsive-dialog),
+    .cdk-global-overlay-wrapper:has(.event-dialog-container) {
       align-items: flex-start !important;
     }
   }
